# di-python-data-analyse

./: .gitignore  CODEOWNERS  README.md  justfile  pyproject.toml  requirements.txt
.github/: dependabot.yaml
analyser/repos/: analyse.py  query.sql  utils.py
src/di_python_data_analyse/: __main__.py  bigquery.py
