[project]
name = "di-python-data-analyse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Eystein Waade", email = "eystein.waade@nav.no" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
