[project]
name = "di_python_data_analyse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Eystein Waade", email = "eystein.waade@nav.no" }
]
requires-python = ">=3.12"
dependencies = [
    "db-dtypes>=1.4.3",
    "google-cloud-bigquery>=3.34.0",
    "google-cloud-bigquery-storage>=2.32.0",
    "pandas>=2.3.0",
]

[project.scripts]
bigquery = "di_python_data_analyse.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.12.1",
]

[tool.ruff]
include = ["*.py", "*.ipynb"]
line-length = 120